# pico2_dev

./: LICENSE  README.md
pico2w/Snomann/: CMakeLists.txt
pico2w/Snomann/port/FreeRTOS-Kernel/: FreeRTOSConfig.h
pico2w/Snomann/src/: CMakeLists.txt  main.cpp  main_PicoW.cpp  main_rp2040.cpp
pico2w/ftos_ble/: CMakeLists.txt
pico2w/ftos_ble/src/: CMakeLists.txt  main.c
